moved map div outside of container.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
-
+<head>
   <title>Map</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -25,8 +25,8 @@
     <li role="presentation" class="active"><a href="map">Map</a></li>
     <li role="presentation"><a href="timeline">Timeline</a></li>
    </ul>
-   <div id="map"></div>
  </div>
+ <div id="map"></div>
  <script>
 
    // initialize the map
