--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -19,11 +19,11 @@
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
  <div class="container">
-    <ul class="nav nav-pills">
-    <li role="presentation"><a href="/">Home</a></li>
-    <li role="presentation" class="active"><a href="map">Map</a></li>
-    <li role="presentation"><a href="timeline">Timeline</a></li>
-    </ul>
+    <nav class="nav nav-pills">
+        <li role="presentation"><a href="/">Home</a></li>
+        <li role="presentation" class="active"><a href="map">Map</a></li>
+        <li role="presentation"><a href="timeline">Timeline</a></li>
+    </nav>
     <div id="map"></div>
  </div>
 
