--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -15,11 +15,11 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <div class="container">
-    <ul class="nav nav-pills">
+    <nav class="nav nav-pills">
         <li role="presentation"><a href="/">Home</a></li>
         <li role="presentation"><a href="map">Map</a></li>
         <li role="presentation" class="active"><a href="timeline">Timeline</a></li>
-    </ul>
+    </nav>
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
         <div class="dropdown">
