fixing navbar display in mobile.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -24,6 +24,8 @@
         <li role="presentation" class="active"><a href="map">Map</a></li>
         <li role="presentation"><a href="timeline">Timeline</a></li>
     </nav>
+ </div>
+ <div class="container">
     <div id="map"></div>
  </div>
 
