--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -20,6 +20,8 @@
         <li role="presentation"><a href="map">Map</a></li>
         <li role="presentation" class="active"><a href="timeline">Timeline</a></li>
     </nav>
+</div>
+<div class="container">
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
         <div class="dropdown">
