added page header and title

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -16,6 +16,9 @@
       <li role="presentation"><a href="map">Map</a></li>
       <li role="presentation"><a href="timeline">Timeline</a></li>
     </nav>
+    <div class="page-header">
+      <h1>West Yorkshire Flooding</h1>
+    </div>
     {% if floods %}
       {% for flood in floods %}
         <div class="alert alert-danger">
