Created river level script to get get all river level data for leeds, tadcaster, castleford, kirkstall and mytholmroyd.
Added some infomation about the website to the index page.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -42,7 +42,8 @@
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
           <div class="panel-body">This website resource was produced as part of a research
-            project for the University of Leeds.</div>
+            project for the University of Leeds.<br>This website uses Environment Agency flood and river level data from the real-time data API (Beta)
+</div>
         </div>
       </div>
       <div class="panel panel-default">
@@ -52,7 +53,9 @@
           </h4>
         </div>
         <div id="collapse2" class="panel-collapse collapse">
-          <div class="panel-body">Info about map page</div>
+          <div class="panel-body">The map page consists of geo-located photographs sourced from Flickr and Instagram.<br>
+            There are also geo-tagged tweets plotted to this map relating to the flooding on the 26/12/2015<br>
+          </div>
         </div>
       </div>
       <div class="panel panel-default">
@@ -62,7 +65,9 @@
           </h4>
         </div>
         <div id="collapse3" class="panel-collapse collapse">
-          <div class="panel-body">Info about timeline</div>
+          <div class="panel-body">The timeline page provides a breakdown of all the flood data (photos, rain-levels and tweets)<br>
+          
+          </div>
         </div>
       </div>
     </div>
