--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -35,6 +35,11 @@
                     y: [],
                     type: 'scatter'
                     };
+                    var trace2 = {
+                    x: [],
+                    y: [],
+                    type: 'scatter'
+                    };
                 </script>
                {% if flood_events %} 
                     {% for flood_event in flood_events reversed %} 
@@ -61,6 +66,21 @@
                         }
                     </script>
                 {% endfor %}
+                {% for river in flood_event.2 %}
+                    <script>
+                        var substr = location.search.substr(1);
+                        var dates = substr.split("+");
+                        var dateTaken = new Date("{{ river.date_taken|date:'SHORT_DATE_FORMAT' }}")
+                        if (dateTaken >= new Date(dates[0]) && dateTaken <= new Date(dates[1])) {
+                            trace2.x.push("{{ river.date_taken|date:'d/m/Y H:m' }}");
+                            trace2.y.push("{{ river.level }}");
+                        }
+                        else if (dates[0] == ""){
+                            trace2.x.push("{{ river.date_taken|date:'d/m/Y H:m' }}");
+                            trace2.y.push("{{ river.level }}");
+                        }
+                    </script>
+                {% endfor %}
             {% endfor %}
     {% endif %}
     <script>
@@ -72,16 +92,37 @@
                 document.write('<h4 style="text-align: center">Not enough rain gauge data available for selected flood event.</h4>')
             }
             else {
-                document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
-                var data = [trace1]
-                Plotly.newPlot('myDiv', data);
+                document.write('<div id="rainGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+                var raindata = [trace1]
+                Plotly.newPlot('rainGraph', raindata);
             }
         }
         else if (dates[0] == ""){
             document.write('<h4 style="text-align: center">Displaying rain gauge for all available dates.</h4>')
-            document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
-            var data = [trace1];
-            Plotly.newPlot('myDiv', data);
+            document.write('<div id="rainGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+            var raindata = [trace1];
+            Plotly.newPlot('rainGraph', raindata);
+        }
+    </script>
+    <script>
+        if (dates[0] != ""){
+            if (trace2.x === 0 || trace2.y.length == 0){
+                document.write('<h4 style="text-align: center">No River level data available for the flood event selected.</h4>')
+            }
+            else if (trace2.length <= 1) {
+                document.write('<h4 style="text-align: center">Not enough River level data available for selected flood event.</h4>')
+            }
+            else {
+                document.write('<div id="riverGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+                var riverdata = [trace2]
+                Plotly.newPlot('rainGraph', riverdata);
+            }
+        }
+        else if (dates[0] == ""){
+            document.write('<h4 style="text-align: center">Displaying rain gauge for all available dates.</h4>')
+            document.write('<div id="riverGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+            var riverdata = [trace2];
+            Plotly.newPlot('riverGraph', riverdata);
         }
     </script>
     <ul class="timeline">
