--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -110,7 +110,9 @@
     {% endif %}
     <script>
         var riverGraph = "riverGraph"
-        var riverButtons = '<button onclick="Plotly.newPlot(riverGraph, traceAll)" class="btn btn-primary" type="button">All Data</button><button onclick="Plotly.newPlot(riverGraph, traceLeeds)" class="btn btn-primary" type="button">Leeds</button>'
+        var alldata = [traceAll];
+        var leedsdata = [traceLeeds];
+        var riverButtons = '<button onclick="Plotly.newPlot(riverGraph, alldata)" class="btn btn-primary" type="button">All Data</button><button onclick="Plotly.newPlot(riverGraph, leedsdata)" class="btn btn-primary" type="button">Leeds</button>'
 
         if (dates[0] != ""){ //if particular flood event dates have been requested by the user
             if (traceAll.x === 0 || traceAll.y.length == 0){ //if there is no river data available for the dates display message
@@ -123,14 +125,16 @@
                 document.write('<h4 style="text-align: center">Displaying River level data for the selected dates.</h4>') //add relevant message
                 document.write(riverButtons)
                 document.write('<div id="riverGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>') //add the graph to the webpage
-                Plotly.newPlot(riverGraph, traceAll);
+                var riverdata = [traceAll];
+                Plotly.newPlot(riverGraph, riverdata);
             }
         }
         else if (dates[0] == ""){
             document.write('<h4 style="text-align: center">Displaying River level data for all available dates.</h4>')
             document.write(riverButtons)
             document.write('<div id="riverGraph" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
-            Plotly.newPlot('riverGraph', traceAll);
+            var riverdata = [traceAll];
+            Plotly.newPlot('riverGraph', riverdata);
         }
     </script>
     <ul class="timeline">
